--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,65 @@
 services:
   main_db:
+    image: postgres:alpine
+    env_file: .env
+    container_name:  main_db
+    volumes:
+      # - ./pg_hba.conf:/usr/local/share/postgresql/pg_hba.conf
+      - ./docker/db/psql_init.sh:/docker-entrypoint-initdb.d/psql_init.sh
+      - trails_pgdata:/var/lib/postgresql/data
   
   redis_db:
+    image:  redis:alpine
+    container_name: redis_db
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
 
   rabbit_mq:
+    image: rabbitmq:alpine
+    volumes:
+      - rabbit_data:/var/lib/rabbitmq/mnesia/rabbit@www
+    env_file: .env
 
   app:
+    build:
+      context:  .
+      dockerfile: ./docker/app/dockerfile
+      target: dev
+
+    container_name: app
+    restart: always
+    volumes:
+      - ./stactrails:/homw/www/app
+      - trails_static:/app/static/
+    ports:
+      - 8000:8080
+      
+    depends_on:
+      - main_db
+      - redis_db
 
   prefork:
+    build:
+      context:  .
+      dockerfile: ./docker/app/dockerfile
+      target: celery
+
+    container_name: prefork
+    restart: always
+    volumes:
+      - ./stactrails:/homw/www/app
+      
+    depends_on:
+      - rabbit_mq
+      - main_db
+      - redis_db
+
+
 
 
 
 volumes:
-  
+  trails_pgdata:
+  trails_static:
+  rabbit_data:
 
