--- a/docker/app/dockerfile
+++ b/docker/app/dockerfile
@@ -25,19 +25,19 @@ WORKDIR /home/www/app/
 
 USER root
 
-COPY --chown=www:www ../stacktrails/requirements.txt ./
+COPY --chown=www:www ./stacktrails/requirements.txt ./
 
 RUN  pip install --upgrade pip
 
 RUN pip install -r requirements.txt
 
-COPY --chown=www:www ./entrypoint.sh /usr/local/bin/
+COPY --chown=www:www ./docker/app/entrypoint.sh /usr/local/bin/
 
 RUN chmod a+x  /usr/local/bin/entrypoint.sh
 
 USER www
 
-COPY  ../stacktrails  ./
+COPY  ./stacktrails  ./
 
 EXPOSE 8080
 
@@ -50,7 +50,7 @@ FROM base as dev
 
 USER root
 
-COPY --chown=www:www ./dev.startup.sh /usr/local/bin/
+COPY --chown=www:www ./docker/app/dev.startup.sh /usr/local/bin/
 
 RUN chmod a+x /usr/local/bin/dev.startup.sh
 
@@ -63,7 +63,7 @@ FROM base as prefork
 
 USER root
 
-COPY --chown=www:www ./prefork.sh /usr/local/bin/
+COPY --chown=www:www ./docker/app/prefork.sh /usr/local/bin/
 
 RUN chmod a+x /usr/local/bin/prefork.sh
 
@@ -73,7 +73,7 @@ FROM base as prod
 
 USER root
 
-COPY --chown=www:www ./prod.startup.sh /usr/local/bin/
+COPY --chown=www:www ./docker/app/prod.startup.sh /usr/local/bin/
 
 RUN chmod a+x /usr/local/bin/prod.startup.sh
 
