--- a/docker/app/dockerfile
+++ b/docker/app/dockerfile
@@ -33,13 +33,14 @@ RUN  pip install --upgrade pip
 
 RUN pip install -r requirements.txt
 
-COPY --chown=www:www ./docker/app/entrypoint.sh /usr/local/bin/
+COPY --chown=www:www ./docker/app/entrypoint.sh /usr/local/bin/entrypoint.sh
 
-RUN chmod a+x  /usr/local/bin/entrypoint.sh
+
+RUN chmod +x  /usr/local/bin/entrypoint.sh
 
 USER www
 
-COPY  ./stacktrails  ./
+COPY --chown=www:www ./stacktrails  ./
 
 EXPOSE 8080
 
