--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
 
       - name: Run docker-compose
         run: |
-          docker-compose -f ./stacktrailsbackend/docker-compose.yml up -d
-          docker-compose -f ./stacktrailsbackend/docker-compose.yml ps
-          docker-compose -f ./stacktrailsbackend/docker-compose.yml down
+          docker compose -f ./stacktrailsBackend/docker-compose.yml up -
+          docker compose -f ./stacktrailsBackend/docker-compose.yml ps
+          docker compose -f ./stacktrailsBackend/docker-compose.yml down
 
       - name: Test and submit coverage report
         run: |
