--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run docker-compose
         run: |
-          docker compose -f up -
+          docker compose -f up
           docker compose -f ps
           docker compose -f down
 
