--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
           echo "${{secrets.REDIS_HOST}}" >> .env
           echo "${{secrets.REDIS_PORT}}" >> .env
           echo "${{secrets.REDIS_URI}}" >> .env
+          echo $(pwd)
 
 
 
