--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,16 +41,16 @@ jobs:
           echo "${{secrets.REDIS_URI}}" >> ././stacktrails/.env
 
 
-
       - name: Run docker-compose
         run: |
           docker-compose -f ././docker-compose.yml up -d
           docker-compose -f ././docker-compose.yml ps
-          docker-compose -f ././docker-compose.yml down
 
       - name: Test and submit coverage report
         run: |
-          docker build -f $(pwd)/docker/app/Dockerfile -t  stacktrails:master .
-          docker run --rm -v $(pwd)/stacktrails/:/usr/src/stacktrails stacktrails:master ./pytest.sh
+          docker compose exec -it app python manage.py test -v 1
           pip install coveralls
           cd stacktrails && coveralls --service=github
+
+      - name: bring down docker-compose
+        run: docker-compose -f ././docker-compose.yml down
