--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
       - name: Test and submit coverage report
         env:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          DB_NAME: ${{secrets.DB_NAME}}
         run: |
           docker compose exec app python manage.py test --settings=stacktrails.settings -v 1
           pip install coveralls
