--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,22 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           DB_NAME: ${{secrets.DB_NAME}}
         run: |
+          touch ././stacktrails/.env
+          echo "dev=true" >> ././stacktrails/.env
+          echo "${{secrets.SECRET_KEY}}" >> ././stacktrails/.env
+          echo "${{secrets.POSTGRES_PASSWORD}}" >> ././stacktrails/.env
+          echo "${{secrets.BROKER_URL}}" >> ././stacktrails/.env
+          echo "${{secrets.RABBITMQ_DEFAULT_PASS}}" >> ././stacktrails/.env
+          echo  "HOSTNAME=www" >> ././stacktrails/.env
+          echo "RABBITMQ_DEFAULT_USER=www" >> ././stacktrails/.env
+          echo "${{secrets.RESULT_BACKEND}}" >> ././stacktrails/.env
+          echo "${{secrets.DB_USER}}" >> ././stacktrails/.env
+          echo "${{secrets.DB_PASSWORD}}" >> ././stacktrails/.env
+          echo "${{secrets.DB_HOST}}" >> ././stacktrails/.env
+          echo "${{secrets.DB_NAME}}" >> ././stacktrails/.env
+          echo "${{secrets.REDIS_HOST}}" >> ././stacktrails/.env
+          echo "${{secrets.REDIS_PORT}}" >> ././stacktrails/.env
+          echo "${{secrets.REDIS_URI}}" >> ././stacktrails/.env
           docker compose exec app python manage.py test --settings=stacktrails.settings -v 1
           pip install coveralls
           cd stacktrails && coveralls --service=github
