--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,20 +28,20 @@ jobs:
         run: |
           touch ././stacktrails/.env
           echo "dev=true" >> ././stacktrails/.env
-          echo "${{secrets.SECRET_KEY}}" >> ././stacktrails/.env
-          echo "${{secrets.POSTGRES_PASSWORD}}" >> ././stacktrails/.env
-          echo "${{secrets.BROKER_URL}}" >> ././stacktrails/.env
-          echo "${{secrets.RABBITMQ_DEFAULT_PASS}}" >> ././stacktrails/.env
+          echo "SECRET_KEY=${{secrets.SECRET_KEY}}" >> ././stacktrails/.env
+          echo "POSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}" >> ././stacktrails/.env
+          echo "BROKER_URL=${{secrets.BROKER_URL}}" >> ././stacktrails/.env
+          echo "RABBITMQ_DEFAULT_PASS=${{secrets.RABBITMQ_DEFAULT_PASS}}" >> ././stacktrails/.env
           echo  "HOSTNAME=www" >> ././stacktrails/.env
           echo "RABBITMQ_DEFAULT_USER=www" >> ././stacktrails/.env
-          echo "${{secrets.RESULT_BACKEND}}" >> ././stacktrails/.env
-          echo "${{secrets.DB_USER}}" >> ././stacktrails/.env
-          echo "${{secrets.DB_PASSWORD}}" >> ././stacktrails/.env
-          echo "${{secrets.DB_HOST}}" >> ././stacktrails/.env
-          echo "${{secrets.DB_NAME}}" >> ././stacktrails/.env
-          echo "${{secrets.REDIS_HOST}}" >> ././stacktrails/.env
-          echo "${{secrets.REDIS_PORT}}" >> ././stacktrails/.env
-          echo "${{secrets.REDIS_URI}}" >> ././stacktrails/.env
+          echo "RESULT_BACKEND=${{secrets.RESULT_BACKEND}}" >> ././stacktrails/.env
+          echo "DB_USER=${{secrets.DB_USER}}" >> ././stacktrails/.env
+          echo "DB_PASSWORD=${{secrets.DB_PASSWORD}}" >> ././stacktrails/.env
+          echo "DB_HOST=${{secrets.DB_HOST}}" >> ././stacktrails/.env
+          echo "DB_NAME=${{secrets.DB_NAME}}" >> ././stacktrails/.env
+          echo "REDIS_HOST=${{secrets.REDIS_HOST}}" >> ././stacktrails/.env
+          echo "REDIS_PORT=${{secrets.REDIS_PORT}}" >> ././stacktrails/.env
+          echo "REDIS_URI=${{secrets.REDIS_URI}}" >> ././stacktrails/.env
 
 
       - name: Run docker-compose
@@ -52,7 +52,7 @@ jobs:
       - name: Test and submit coverage report
         env:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          RESULT_BACKEND:  ${{secrets.DB_NAME}}
+          # RESULT_BACKEND:  ${{secrets.DB_NAME}}
         run: |
           docker compose exec app python manage.py test --settings=stacktrails.settings -v 1
         # pip install coveralls
