--- a/stacktrails/requirements.txt
+++ b/stacktrails/requirements.txt
@@ -26,12 +26,14 @@ idna==3.6
 importlib-metadata==7.0.1
 kombu==5.3.5
 mypy-extensions==1.0.0
+oauthlib==3.2.2
 packaging==23.2
 pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.1.0
 prompt-toolkit==3.0.43
 psycopg2==2.9.6
+pyasn1==0.5.1
 PyJWT==2.8.0
 python-crontab==3.0.0
 python-dateutil==2.8.2
@@ -39,6 +41,8 @@ python-dotenv==1.0.0
 pytz==2023.3.post1
 redis==4.5.4
 requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
